<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_design"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:src="@drawable/farmers2"
        android:layout_margin="@dimen/banner_margin"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/directions"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:padding="@dimen/dft_padding"
            android:layout_alignParentLeft="true"
            android:src="@drawable/directions"
            android:gravity="center_vertical"
            android:onClick="getDirections"
            />
        <TextView
            android:id="@+id/directions_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_toRightOf="@+id/directions"
            android:text="@string/address"
            android:textColor="@color/text_color"
            android:gravity="center_vertical"
            android:onClick="getDirections"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/phone"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:padding="@dimen/double_padding"
            android:layout_alignParentLeft="true"
            android:src="@drawable/dial"
            android:gravity="center_vertical"
            android:onClick="phoneCall"
            />
        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_toRightOf="@+id/phone"
            android:text="@string/contact"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:onClick="phoneCall"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/email"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:padding="@dimen/double_padding"
            android:layout_alignParentLeft="true"
            android:src="@drawable/email"
            android:gravity="center_vertical"
            android:onClick="sndEmail"
            />
        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_toRightOf="@+id/email"
            android:text="@string/email"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:onClick="sndEmail"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/website"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:padding="@dimen/double_padding"
            android:layout_alignParentLeft="true"
            android:src="@drawable/website"
            android:gravity="center_vertical"
            android:onClick="openPage"
            />
        <TextView
            android:id="@+id/website_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_toRightOf="@+id/website"
            android:text="@string/website"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:onClick="openPage"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/hours"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/img_height"
            android:padding="@dimen/dft_padding"
            android:layout_alignParentLeft="true"
            android:src="@drawable/hours"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/hours_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_toRightOf="@+id/hours"
            android:text="@string/hours"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_toRightOf="@+id/hours"
        android:text="@string/description"
        android:gravity="center_vertical"
        android:textColor="@color/text_color"
        android:textStyle="italic"
        android:textAlignment="center"
        android:padding="@dimen/dft_padding"
        />

</LinearLayout>

</ScrollView>